--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  curved_navigation_bar: ^0.3.1 #latest version
-  photofilters: ^1.0.5
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  curved_navigation_bar: ^1.0.1
+  photofilters: ^3.0.1
+  cupertino_icons: ^1.0.3
+  http: ^0.13.4
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
