--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -24,6 +24,7 @@ dependencies:
   cupertino_icons: ^1.0.3
   http: ^0.13.4
   equatable: ^2.0.3
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
